customAutoLoad Module UI : Download Method

--- a/web/pages/blocks/superCustomAutoLoadManager.ejs
+++ b/web/pages/blocks/superCustomAutoLoadManager.ejs
@@ -1,3 +1,12 @@
+<form class="form-group-group red" id="downloadNewModule">
+    <div class="form-group">
+        <input type="text" placeholder="Download URL for Module" class="form-control" name="downloadUrl" />
+    </div>
+    <div class="form-group">
+        <input type="text" placeholder="Subdirectory for Module (Inside the downloaded package)" class="form-control" name="packageRoot" />
+    </div>
+    <div><button type="submit" class="btn btn-block btn-default"><i class="fa fa-download"></i> <%- lang.Download %></button></div>
+</form>
 <div class="form-group-group red" id="customAutoLoadList">
 
 </div>
