--- a/web/pages/blocks/superCustomAutoLoadManager.ejs
+++ b/web/pages/blocks/superCustomAutoLoadManager.ejs
@@ -7,7 +7,7 @@
     </div>
     <div><button type="submit" class="btn btn-block btn-default"><i class="fa fa-download"></i> <%- lang.Download %></button></div>
 </form>
-<div class="form-group-group red pt-2 pb-2" id="customAutoLoadList">
+<div class="form-group-group red pt-4 pb-0 row m-0" id="customAutoLoadList">
 
 </div>
 <script src="<%-window.libURL%>libs/js/super.customAutoLoad.js" type="text/javascript"></script>
