customAutoLoad UI : minor prettify+

--- a/web/pages/blocks/superCustomAutoLoadManager.ejs
+++ b/web/pages/blocks/superCustomAutoLoadManager.ejs
@@ -1,4 +1,5 @@
-<form class="form-group-group red" id="downloadNewModule">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/super.customAutoLoad.css">
+<form class="form-group-group red pt-4" id="downloadNewModule">
     <div class="form-group">
         <input type="text" placeholder="Download URL for Module" class="form-control" name="downloadUrl" />
     </div>
