--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -73,7 +73,7 @@
                     </div>
                     <div class="ram_load display-table-cell">
                         <span class="pull-right percent"></span>
-                       <label><span class="os_totalmem" style="letter-spacing:2px;font-weight:100"></span> <%-lang.MB%> <%-lang.RAM%></label>
+                       <label><span class="os_totalmem used" style="letter-spacing:2px;font-weight:100"></span> <%-lang.MB%> <%-lang.RAM%></label>
                       <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" style="width:0%"></div>
                       </div>
