fix Byaku link in Help window

--- a/web/pages/blocks/help.ejs
+++ b/web/pages/blocks/help.ejs
@@ -189,7 +189,7 @@
                                   icon: 'star',
                                   color: 'success',
                                   text: 'Join Public Beta',
-                                  href: 'https://cdn.shinobi.video/installers/Dashcam/',
+                                  href: 'https://cdn.shinobi.video/installers/Byaku/',
                                   class: ''
                               },
                               {
