P2P : Can create connection based on config

--- a/web/pages/blocks/header.ejs
+++ b/web/pages/blocks/header.ejs
@@ -22,4 +22,4 @@
     if(!string){string=''}
     return string.replace(/'/g,"\\'")
 }%>
-<script>var subscriptionId = '<%- config.subscriptionId || 'notActivated' %>'</script>
+<script>var machineId = '<%- config.machineId || 'noMachineIdSet' %>'</script>
