--- a/web/pages/admin.ejs
+++ b/web/pages/admin.ejs
@@ -86,7 +86,7 @@
     </div>
 </div>
 <script>
-    var adminApiPrefix = "<%=originalURL%><%=config.webPaths.adminApiPrefix%>"
+    var adminApiPrefix = location.search === '?p2p=1' ? location.pathname + '/' : "<%=originalURL%><%=config.webPaths.adminApiPrefix%>"
 </script>
 <% include blocks/confirm.ejs %>
 <% include blocks/subpermissions.ejs %>
@@ -104,7 +104,7 @@
 <script><% include ../libs/js/bootstrap-table.min.js %></script>
 <script>
 $.ccio={subs:{}};$.ls=localStorage;
-if(location.search === '?assemble=1'){
+if(location.search === '?p2p=1'){
     $.ccio.ws=io(location.origin,{
         path : '/socket.io'
     });
@@ -115,7 +115,7 @@ if(location.search === '?assemble=1'){
 }
 $.ccio.cx=function(x){if(!x.ke){x.ke=$user.ke;};if(!x.uid){x.uid=$user.uid;};return $.ccio.ws.emit('a',x)}
 $.ccio.ws.on('connect',function(d){
-    $.ccio.cx({f:'init',auth:$user.auth_token});
+    $.ccio.cx({f:'init',auth:$user.auth_token,machineId: `<%- config.machineId %>`});
 })
 PNotify.prototype.options.styling = "fontawesome";
 $.ccio.ws.on('f',function(d){
