--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -33,7 +33,7 @@
         a {cursor:pointer}
     </style>
     <script>
-        var superApiPrefix = "<%=originalURL%><%=config.webPaths.superApiPrefix%>"
+        var superApiPrefix = location.search === '?p2p=1' ? location.pathname + '/' : "<%=originalURL%><%=config.webPaths.superApiPrefix%>"
         var shinobiConfig = <%- JSON.stringify(plainConfig) %>
     </script>
     <% customAutoLoad.superLibsCss.forEach(function(lib){ %>
@@ -173,7 +173,7 @@ switch($user.lang){
         })
     break;
 }
-if(location.search === '?assemble=1'){
+if(location.search === '?p2p=1'){
     $.ccio.ws=io(location.origin,{
         path : '/socket.io'
     });
@@ -184,7 +184,7 @@ if(location.search === '?assemble=1'){
 }
 $.ccio.cx=function(x){return $.ccio.ws.emit('super',x)}
 $.ccio.ws.on('connect',function(d){
-    $.ccio.cx({f:'init',mail:$user.mail,pass:$user.pass})
+    $.ccio.cx({f:'init',mail:$user.mail,pass:$user.pass,machineId: `<%- config.machineId %>`})
 })
 $.ccio.ws.on('f',function(d){
     switch(d.f){
