--- a/web/pages/blocks/mainpermissions.ejs
+++ b/web/pages/blocks/mainpermissions.ejs
@@ -213,7 +213,7 @@ $.aN.f.submit(function(e){
         webPath = 'editAdmin'
         postData.account = $.aN.selected
     }
-    $.post('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/accounts/'+webPath,postData,function(data){
+    $.post(superApiPrefix + $user.sessionKey+'/accounts/'+webPath,postData,function(data){
         console.log(data)
         if(data.ok === true){
             $.aN.e.modal('hide')
@@ -295,7 +295,7 @@ $.aC.e.on('click','.delete',function(e){
     e.html='Do you want to delete <b>'+e.account.mail+'</b>? You cannot recover this account. Files will remain in the filesystem. If you choose to create an account with the same Group Key it will have the previous events activated in that account.'
     $.confirm.body.html(e.html)
     $.confirm.click({title:'Delete',class:'btn-danger'},function(){
-        $.post('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/accounts/deleteAdmin',{
+        $.post(superApiPrefix + $user.sessionKey+'/accounts/deleteAdmin',{
             account : e.account,
             // "deleteSubAccounts" : "1",
             // "deleteMonitors" : "1",
