--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -91,6 +91,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#customAutoLoad" role="tab"><%-lang['Custom Auto Load']%></a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#easyRemoteAccess" role="tab"><%-lang['Easy Remote Access (P2P)']%></a>
+                                </li>
                             </ul>
                             <div class="card-body">
                                 <!-- Tab panes -->
@@ -110,6 +113,9 @@
                                     </div>
                                     <div class="tab-pane text-left" id="changeSuperPreferences" role="tabpanel">
                                         <% include blocks/changeSuperPreferences.ejs %>
+                                    </div>
+                                    <div class="tab-pane text-left" id="easyRemoteAccess" role="tabpanel">
+                                        <% include blocks/easyRemoteAccess.ejs %>
                                     </div>
                                 </div>
                             </div>
