--- a/web/pages/blocks/easyRemoteAccess.ejs
+++ b/web/pages/blocks/easyRemoteAccess.ejs
@@ -52,7 +52,7 @@
             <blockquote class="text-center m-0 pt-4 pb-4">
                 <p><b>This feature is for subscribers only.</b> To get an API Key please login to your <a class="btn badge badge-sm badge-default" href="https://licenses.shinobi.video/login" target="_blank">Shinobi<b>Shop</b></a> account and create a key associated to <b>any active Subscription ID</b>.</p>
                 <p>If you would like to get access to a private (dedicated) P2P server please create an account at the <a class="btn badge badge-sm badge-default" href="https://licenses.shinobi.video/login" target="_blank">Shinobi<b>Shop</b></a> and contact us via the Live Chat widget.</p>
-                <p class="mb-0">Purchase a <a class="btn badge badge-sm badge-success" href="https://licenses.shinobi.video/subscribe?planSubscribe=plan_G31AZ9mknNCa6z" target="_blank">Mobile License Key</a> to started!</p>
+                <p class="mb-0">Purchase a <a class="btn badge badge-sm badge-success" href="https://licenses.shinobi.video/subscribe?planSubscribe=plan_G31AZ9mknNCa6z" target="_blank">Mobile License Key</a> to get started!</p>
             </blockquote>
         </div>
     </div>
