--- a/web/pages/blocks/easyRemoteAccess.ejs
+++ b/web/pages/blocks/easyRemoteAccess.ejs
@@ -8,7 +8,7 @@
         font-size: 9pt;
      }
      blockquote {
-         background: #000000;
+         background: #073c3e;
         height: 100%;
         border-radius: 15px;
         color: #fff;
