--- a/web/pages/blocks/easyRemoteAccess.ejs
+++ b/web/pages/blocks/easyRemoteAccess.ejs
@@ -64,7 +64,7 @@
                 <div class="col-md-4 mt-2">
                     <div class="card <% if(config.p2pHostSelected === key){ %>active<% } %>" drawn-id="<%- key %>">
                         <div class="card-header" style="min-height:auto">
-                            <!-- <span class="badge badge-sm badge-danger pull-right selected-badge"><%- lang.Selected %></span> -->
+                            <span class="badge badge-sm badge-danger pull-right selected-badge"><%- lang.Selected %></span>
                             <span class="badge badge-sm badge-info name-badge"><%- details.name %></span>
                         </div>
                         <div style="min-height:auto">
