humanize Easy Remote Access tab more

--- a/web/pages/blocks/easyRemoteAccess.ejs
+++ b/web/pages/blocks/easyRemoteAccess.ejs
@@ -68,12 +68,12 @@
                             <span class="badge badge-sm badge-info name-badge"><%- details.name %></span>
                         </div>
                         <div style="min-height:auto">
-                            <table class="table table-striped mb-0 text-center">
+                            <table class="table mb-0 text-center">
                                 <tr title="Host Address">
-                                    <td><i class="fa fa-globe"></i></td>
-                                    <td class="text-left epic-text epic-text-filter"><%- lang.Host %></td>
-                                    <td class="text-right"><span class="info-badge badge badge-sm badge-default"><%- details.host %></span></td>
+                                    <td><span class="info-badge badge badge-sm badge-default"><%- details.host %></span></td>
                                 </tr>
+                            </table>
+                            <table class="table table-striped mb-0 text-center">
                                 <tr>
                                     <td><i class="fa fa-download"></i></td>
                                     <td class="text-left epic-text epic-text-filter"><%- lang['Download Bandwidth'] %></td>
