Show more live stats in P2P Server selection

--- a/web/pages/blocks/easyRemoteAccess.ejs
+++ b/web/pages/blocks/easyRemoteAccess.ejs
@@ -98,6 +98,21 @@
                                     <td class="text-left epic-text epic-text-filter"><span class="ramTotal"><i class="fa fa-spinner fa-pulse"></i></span> <%- lang.RAM %></td>
                                     <td class="text-right"><span class="info-badge badge badge-sm badge-default"><span class="ramPercent"><i class="fa fa-spinner fa-pulse"></i></span>%, <span class="ramUsed"><i class="fa fa-spinner fa-pulse"></i></span> MB</span></td>
                                 </tr>
+                                <tr title="Registered Servers">
+                                    <td><i class="fa fa-database"></i></td>
+                                    <td class="text-left epic-text epic-text-filter"><%- lang['Registered Servers'] %></td>
+                                    <td class="text-right"><span class="info-badge badge badge-sm badge-default"><span class="registeredServers"><i class="fa fa-spinner fa-pulse"></i></span></td>
+                                </tr>
+                                <tr title="Connected Users">
+                                    <td><i class="fa fa-user"></i></td>
+                                    <td class="text-left epic-text epic-text-filter"><%- lang['Connected Users'] %></td>
+                                    <td class="text-right"><span class="info-badge badge badge-sm badge-default"><span class="connectedUsers"><i class="fa fa-spinner fa-pulse"></i></span></td>
+                                </tr>
+                                <tr title="Viewing Server Stats">
+                                    <td><i class="fa fa-eye"></i></td>
+                                    <td class="text-left epic-text epic-text-filter"><%- lang['Viewing Server Stats'] %></td>
+                                    <td class="text-right"><span class="info-badge badge badge-sm badge-default"><span class="chartViewerCount"><i class="fa fa-spinner fa-pulse"></i></span></td>
+                                </tr>
                             </table>
                         </div>
                         <div class="card-footer" style="min-height:auto">
