ShinobiHub config search use public configs

--- a/web/pages/blocks/monitoredit.ejs
+++ b/web/pages/blocks/monitoredit.ejs
@@ -254,9 +254,12 @@
               <li class="mdl-menu__item add_map"><i class="fa fa-rss"></i> <%-lang['Add Input Feed']%></li>
               <li class="mdl-menu__item add_channel"><i class="fa fa-puzzle-piece"></i> <%-lang['Add Channel']%></li>
             </ul>
-            <div class="h_det_input h_det_1" style="display:inline-block">
+            <div class="h_det_input h_det_1" style="display:inline-block;margin-right:5px">
                 <button type="button" class="btn btn-primary" monitor="region"><i class="fa fa-grav"></i> <%-lang['Region Editor']%></button>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#detector_filter"><i class="fa fa-grav"></i> <%-lang['Detector Filters']%></button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#detector_filter"><i class="fa fa-filter"></i> <%-lang['Event Filters']%></button>
+              </div>
+            <div style="display:inline-block">
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#shinobihub_viewer"><i class="fa fa-home"></i> <%-lang.ShinobiHub %></button>
               </div>
           </div>
           <div style="display:inline-block;margin-right:5px">
