change Detector Filters label to Event Filters

--- a/web/pages/blocks/detectorfilters.ejs
+++ b/web/pages/blocks/detectorfilters.ejs
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
         <h4 class="modal-title" id="detector_filterLabel">
-            <i class="fa fa-grav"></i> &nbsp; <%-lang['Detector Filters']%>
+            <i class="fa fa-grav"></i> &nbsp; <%-lang['Event Filters']%>
         </h4>
       </div>
       <div class="modal-body">
