--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.righttoleft.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.sidemenu.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.darktheme.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.card.css">
 <% customAutoLoad.LibsCss.forEach(function(lib){ %>
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/<%-lib%>">
 <% }) %>
