re-add Update button to Superuser panel (dedicated and git-only)

--- a/web/pages/blocks/superSystemTab.ejs
+++ b/web/pages/blocks/superSystemTab.ejs
@@ -5,6 +5,9 @@
     <a href="#" class="btn btn-default" restart="system">
         <i class="fa fa-retweet"></i> <%- lang['Restart Core'] %>
     </a>
+    <a href="#" class="btn btn-default" system="update">
+        <i class="fa fa-retweet"></i> <%- lang['Update'] %>
+    </a>
     <a href="#" class="btn btn-default" restart="cron">
         <i class="fa fa-retweet"></i> <%- lang['Restart CRON'] %>
     </a>
