--- a/web/pages/blocks/superSystemTab.ejs
+++ b/web/pages/blocks/superSystemTab.ejs
@@ -5,9 +5,11 @@
     <a href="#" class="btn btn-default" restart="system">
         <i class="fa fa-retweet"></i> <%- lang['Restart Core'] %>
     </a>
-    <a href="#" class="btn btn-default" system="update">
-        <i class="fa fa-retweet"></i> <%- lang['Update'] %>
-    </a>
+    <% if(!config.thisIsDocker){ %>
+        <a href="#" class="btn btn-default" system="update">
+            <i class="fa fa-retweet"></i> <%- lang['Update'] %>
+        </a>
+    <% } %>
     <a href="#" class="btn btn-default" restart="cron">
         <i class="fa fa-retweet"></i> <%- lang['Restart CRON'] %>
     </a>
