Add "Add All" button to ONVIF Scanner (Adds all cameras not already added)

--- a/web/pages/blocks/probe.ejs
+++ b/web/pages/blocks/probe.ejs
@@ -78,6 +78,7 @@
         </div>
       </div>
       <div class="modal-footer">
+        <button type="button" class="btn btn-success add-all" data-dismiss="modal"><i class="fa fa-plus"></i> <%-lang['Add All'] %></button>
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><i class="fa fa-times"></i> <%-lang.Close%></button>
       </div>
     </form>
