--- a/web/pages/blocks/powerVideo2.ejs
+++ b/web/pages/blocks/powerVideo2.ejs
@@ -42,6 +42,16 @@
                               </div>
                         </div>
                      </div>
+                     <div class="form-group">
+                       <label><div><span><%-lang['Video Set']%></span></div>
+                           <div>
+                               <select class="form-control" id="powerVideoSet">
+                                   <option value="local">Local</option>
+                                   <option value="cloud">Cloud</option>
+                               </select>
+                           </div>
+                       </label>
+                     </div>
                   </div>
               </div>
               <div class="col-md-8">
