fix monitor pop button on stream window and on event execution

--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -183,6 +183,7 @@
 <script src="<%-window.libURL%>libs/js/basic.js"></script>
 <script><% include ../libs/js/dash2.config.js %></script>
 <script src="<%-window.libURL%>libs/js/dash2.basic.js"></script>
+<script src="<%-window.libURL%>libs/js/dash2.monitorUtils.js"></script>
 <script src="<%-window.libURL%>libs/js/dash2.confirm.js"></script>
 <script src="<%-window.libURL%>libs/js/dash2.socketio.js"></script>
 <script src="<%-window.libURL%>libs/js/material.min.js"></script>
