--- a/web/pages/blocks/onvifDeviceManager.ejs
+++ b/web/pages/blocks/onvifDeviceManager.ejs
@@ -12,24 +12,7 @@
           <div class="row">
           <div class="col-md-6">
           <div class="row">
-              <div class="col-md-2 hidden-xs follow-list">
-                  <ul class="affix"></ul>
-              </div>
-              <div class="col-md-10">
-          <div class="text-center msg"></div>
-          <div class="form-group-group green">
-              <h4><%-lang['Account Info']%></h4>
-            <div class="form-group">
-                <label><div><span><%-lang.Email%></span></div>
-                    <div><input class="form-control" value="<%- $user.mail %>" disabled></div>
-                </label>
-            </div>
-            <div class="form-group">
-                <label><div><span><%-lang['Group Key']%></span></div>
-                    <div><input class="form-control" value="<%- $user.ke %>" disabled></div>
-                </label>
-            </div>
-          </div>
+              <div class="col-md-12">
           <%
           var buildOptions = function(field,possiblities){
               if(!field)console.error('field',field)
@@ -270,8 +253,7 @@
       </div>
       </div>
       <div class="col-md-6">
-          <pre>
-              <code id="onvifDeviceManagerInfo"></code>
+          <pre id="onvifDeviceManagerInfo">
           </pre>
       </div>
       </div>
