--- a/web/pages/blocks/schedules.ejs
+++ b/web/pages/blocks/schedules.ejs
@@ -38,161 +38,7 @@
               <div class="form-group">
                 <label><div><span><%-lang['Timezone Offset']%></span></div>
                     <div><select class="form-control" name="timezone">
-                        <% [
-                               {
-                                  "text": "UTC−12:00, Y",
-                                  "value": -720
-                               },
-                               {
-                                  "text": "UTC−11:00, X",
-                                  "value": -660
-                               },
-                               {
-                                  "text": "UTC−10:00, W",
-                                  "value": -600
-                               },
-                               {
-                                  "text": "UTC−09:30, V†",
-                                  "value": -570
-                               },
-                               {
-                                  "text": "UTC−09:00, V",
-                                  "value": -540
-                               },
-                               {
-                                  "text": "UTC−08:00, U",
-                                  "value": -480
-                               },
-                               {
-                                  "text": "UTC−07:00, T",
-                                  "value": -420
-                               },
-                               {
-                                  "text": "UTC−06:00, S",
-                                  "value": -360
-                               },
-                               {
-                                  "text": "UTC−05:00, R",
-                                  "value": -300
-                               },
-                               {
-                                  "text": "UTC−04:00, Q",
-                                  "value": -240
-                               },
-                               {
-                                  "text": "UTC−03:30, P†",
-                                  "value": -210
-                               },
-                               {
-                                  "text": "UTC−03:00, P",
-                                  "value": -180
-                               },
-                               {
-                                  "text": "UTC−02:00, O",
-                                  "value": -120
-                               },
-                               {
-                                  "text": "UTC−01:00, N",
-                                  "value": -60
-                               },
-                               {
-                                  "text": "UTC±00:00, Z",
-                                  "value": 0,
-                                  "selected": true
-                               },
-                               {
-                                  "text": "UTC+01:00, A",
-                                  "value": 60
-                               },
-                               {
-                                  "text": "UTC+02:00, B",
-                                  "value": 120
-                               },
-                               {
-                                  "text": "UTC+03:00, C",
-                                  "value": 180
-                               },
-                               {
-                                  "text": "UTC+03:30, C†",
-                                  "value": 210
-                               },
-                               {
-                                  "text": "UTC+04:00, D",
-                                  "value": 240
-                               },
-                               {
-                                  "text": "UTC+04:30, D†",
-                                  "value": 270
-                               },
-                               {
-                                  "text": "UTC+05:00, E",
-                                  "value": 300
-                               },
-                               {
-                                  "text": "UTC+05:30, E†",
-                                  "value": 330
-                               },
-                               {
-                                  "text": "UTC+05:45, E*",
-                                  "value": 345
-                               },
-                               {
-                                  "text": "UTC+06:00, F",
-                                  "value": 360
-                               },
-                               {
-                                  "text": "UTC+06:30, F†",
-                                  "value": 390
-                               },
-                               {
-                                  "text": "UTC+07:00, G",
-                                  "value": 420
-                               },
-                               {
-                                  "text": "UTC+08:00, H",
-                                  "value": 480
-                               },
-                               {
-                                  "text": "UTC+08:45, H*",
-                                  "value": 525
-                               },
-                               {
-                                  "text": "UTC+09:00, I",
-                                  "value": 540
-                               },
-                               {
-                                  "text": "UTC+09:30, I†",
-                                  "value": 570
-                               },
-                               {
-                                  "text": "UTC+10:00, K",
-                                  "value": 600
-                               },
-                               {
-                                  "text": "UTC+10:30, K†",
-                                  "value": 630
-                               },
-                               {
-                                  "text": "UTC+11:00, L",
-                                  "value": 660
-                               },
-                               {
-                                  "text": "UTC+12:00, M",
-                                  "value": 720
-                               },
-                               {
-                                  "text": "UTC+12:45, M*",
-                                  "value": 765
-                               },
-                               {
-                                  "text": "UTC+13:00, M†",
-                                  "value": 780
-                               },
-                               {
-                                  "text": "UTC+14:00, M†",
-                                  "value": 840
-                               }
-                        ].forEach(function(option){
+                        <% config.timeZones.forEach(function(option){
                             var selected = ''
                             if(option.selected)selected = 'selected'
                             %>
