--- a/web/pages/blocks/onvifDeviceManager.ejs
+++ b/web/pages/blocks/onvifDeviceManager.ejs
@@ -239,7 +239,7 @@
       </div>
       </div>
       <div class="col-md-6">
-          <pre id="onvifDeviceManagerInfo">
+          <pre id="onvifDeviceManagerInfo" style="max-height: 600px;">
           </pre>
       </div>
       </div>
