add API Key selector to Monitors window

--- a/web/pages/blocks/api.ejs
+++ b/web/pages/blocks/api.ejs
@@ -82,7 +82,7 @@
             </div>
           </div>
         <div class="col-md-6">
-            <table class="table table-striped" id="api_list"></table>
+            <table class="table table-striped" id="api_list" style="color: #fff;"></table>
         </div>
         <input type="hidden" name="details">
       </div>
