disable old admin page

--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -239,3 +239,14 @@
 <% } %>
 
 <% include blocks/onvifDeviceManager.ejs %>
+<%
+    if(!details.sub){ %>
+        <script>
+            $(document).ready(function(){
+                if(`${location.pathname}/` === `<%=config.webPaths.adminApiPrefix%>`){
+                    $('#subAccountManager').modal('show')
+                }
+            })
+        </script>
+    <% }
+%>
