--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -1,5 +1,6 @@
 <% include blocks/header %>
 <link rel="stylesheet" href="<%-window.libURL%>libs/themes/Ice/style.css">
+<meta name="google-signin-client_id" content="950694610695-9mao10ud52f7n1no5s2uqupmnusr9jlf.apps.googleusercontent.com">
 <style>
 .wide-text{
     text-transform: uppercase;
@@ -123,6 +124,9 @@
 									<div class="form-group">
                                         <button type="submit" name="login-submit" id="login-submit" tabindex="4" class="btn btn-success btn-block wide-text" style="color:#FFF"><i class="fa fa-key"></i> <%- lang.Login %></button>
 									</div>
+									<div class="form-group">
+                                        <div class="g-signin2" data-onsuccess="onGoogleSignIn"></div>
+									</div>
 									<div class="form-group text-center" style="margin:0">
                                         <span style="<%- config.poweredByShinobiClass %>;margin-right: 10px" class="epic-text text-green"><i class="fa fa-sign-in"></i> <%- lang['Remember Me'] %></span>
                                         <div class="text-right" title="<%- lang['Remember Me'] %>" style="display:inline-block">
@@ -211,4 +215,17 @@ $('[selector]').change(function(e){
     $('.'+e.a+'_'+e.v).show();
     $('.'+e.a+'_text').text($(this).find('option:selected').text())
 }).change();
+</script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<script>
+function onGoogleSignIn(googleUser) {
+  var profile = googleUser.getBasicProfile();
+  console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+  console.log('Name: ' + profile.getName());
+  console.log('Image URL: ' + profile.getImageUrl());
+  console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+  var id_token = googleUser.getAuthResponse().id_token;
+  console.log("ID Token: " + id_token);
+}
 </script>
