Add Alternate Logins section in Settings, Minor Cleanup
+ Login Token API Endpoints for : get single, get all, delete by loginId
+ framework.sql update
+ update auto table creation for existing installations
+ fail message specific to alternateLogin can be passed to UI
+ add type column to LoginTokens table, default is "google" because its the only one (first of many to come)

--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -68,7 +68,7 @@
 								<form id="login-form" method="post" style="display: block;margin:0">
                                     <input type="hidden" name="machineID" id="machineID" value="">
                                     <% var message,timeLeft;if(message){ %>
-                                        <div class="form-group text-center monospace">
+                                        <div class="form-group text-center monospace" id ="login-message">
                                             <%= message %>
     									</div>
                                     <% } %>
@@ -181,6 +181,7 @@
         $('#machineID').val($.ccio.auth)
     })
     $.ccio.f.submit(function(e){
+        $('#login-message').remove()
         $('input').css('border-color','')
         e.e=$(this),e.s=e.e.serializeObject(),e.inputs=e.e.find('input,button');
         if(e.s.remember){
