Fix Google App ID designation, add Name to LoginTokens
+ Show Last Login for LoginTokens in Settings window

--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -1,6 +1,6 @@
 <% include blocks/header %>
 <link rel="stylesheet" href="<%-window.libURL%>libs/themes/Ice/style.css">
-<meta name="google-signin-client_id" content="950694610695-9mao10ud52f7n1no5s2uqupmnusr9jlf.apps.googleusercontent.com">
+<meta name="google-signin-client_id" content="<%- config.appTokenGoogle %>">
 <style>
 .wide-text{
     text-transform: uppercase;
