--- a/web/pages/loginTokenAddGoogle.ejs
+++ b/web/pages/loginTokenAddGoogle.ejs
@@ -1,7 +1,7 @@
 <%
     window.libURL = originalURL + global.s.checkCorrectPathEnding(config.webPaths.home)
 %>
-<meta name="google-signin-client_id" content="950694610695-9mao10ud52f7n1no5s2uqupmnusr9jlf.apps.googleusercontent.com">
+<meta name="google-signin-client_id" content="<%- config.appTokenGoogle %>">
 <script src="<%-window.libURL%>libs/js/jquery.min.js"></script>
 <style>
     body {
